fix modal overflow

--- a/client/src/components/Modal.css
+++ b/client/src/components/Modal.css
@@ -38,7 +38,6 @@ small {
 
 #signup {
   background-color: #61A63A;
-  padding-top: 9px;
   color:white;
   width:280px;
   height: 60px;
